--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
 Utkarsh & Krish : TinkerCad circuit and code 
 Bhavesh: Wheel + gear motor + part integration
 Sakthivel: Ultrasonic sensor + front wheel
-Rajnish: Chassis
+Rajnish: Chassis+postion of components
