--- a/readme
+++ b/readme
@@ -1,4 +1,5 @@
-Utkarsh & Krish : TinkerCad circuit and code 
+Utkarsh  : TinkerCad circuit and code
+Kris : Code Optimization + shotest time
 Bhavesh: Wheel + gear motor + part integration
 Sakthivel: Ultrasonic sensor + front wheel
 Rajnish: Chassis+postion of components
