--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 Utkarsh  : TinkerCad circuit and code
-Kris : Code Optimization + shotest time
+Krish : Code Optimization + shotest time
 Bhavesh: Wheel + gear motor + part integration
 Sakthivel: Ultrasonic sensor + front wheel
 Rajnish: Chassis+postion of components
