--- a/readme
+++ b/readme
@@ -2,4 +2,4 @@ Utkarsh  : TinkerCad circuit and code
 Krish : Code Optimization + shotest time
 Bhavesh: Wheel + gear motor + part integration
 Sakthivel: Ultrasonic sensor + front wheel
-Rajnish: Chassis+postion of components
+Rajnish: Chassis+postion of components+updated code with servo
