--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 Utkarsh  : TinkerCad circuit and code
 Krish : Code Optimization + shotest time
-Bhavesh: Wheel + gear motor + part integration
+Bhavesh: Wheel + gear motor + part integration + obstacle avoiding bot
 Sakthivel: Ultrasonic sensor + front wheel
 Rajnish: Chassis+postion of components+updated code with servo
